# InvisibleAITakehome

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DataParser.h  DirectoryParser.h
source/: CMakeLists.txt  DirectoryParser.cpp
